# MISP

./: pyproject.toml
kaggle/: exercise-explore-your-data.ipynb  exercise-machine-learning-competitions.ipynb  exercise-model-validation.ipynb  exercise-random-forests.ipynb  exercise-underfitting-and-overfitting.ipynb  exercise-your-first-machine-learning-model.ipynb  misp-competition.ipynb
pulp/: blending_problem.ipynb  choco_bar_problem.ipynb  resistor_problem.ipynb  schedule_problem.ipynb
