# python -m pip install .

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [{name = "Jarosław Wierzbowski", email = "jaroslawierzbowski2001@gmail.com"},
            {name = "Rafał Arciszewski", email = "240389@edu.p.lodz.pl"}]
dependencies = [
    "pulp>=2.9.0"
]
dynamic = ["version"]
license = {text = "MIT License"}
name = "misp"
requires-python = ">=3.13.1"

[tool.ruff]
exclude = [
  ".git",
  ".gitignore",
]
fix = true
indent-width = 4
line-length = 160
target-version = "py313"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "W191",
  "FURB101",
  "FURB103",
  "FURB177",
  "TRY400",
  "PLE1205",
  "D100",
  "CPY001",
  "D102",
  "D107",
  "D101",
  "D105",
  "D103",
  "D104",
  "D203",
  "D212",
]

fixable = ["ALL"]

unfixable = ["B"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
order-by-type = true

[tool.setuptools]
py-modules = []
